# retriever

./: .gitignore  .travis.yml  Callie_the_golden_retriever_puppy.txt  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml  tests.yml
benches/: basic.rs
examples/: count_records.rs  long_running_stress_test.rs
src/: lib.rs  prelude.rs
src/bits/: bitfield.rs  bitset.rs  mod.rs
src/idxsets/: idxrange.rs  intersection.rs  mod.rs  noidx.rs
src/internal/: bitset.rs  hasher.rs  idxset.rs  mod.rs
src/internal/bits/: bitfield.rs  bitset.rs  mod.rs
src/internal/mr/: mod.rs  mrvec.rs  reduce.rs  rvec.rs  summarize.rs
src/queries/: chunks.rs  everything.rs  filter.rs  mod.rs  secondary_index.rs
src/reductions/: mod.rs
src/summaries/: mod.rs  reduction.rs
src/traits/: idxset.rs  memory_usage.rs  mod.rs  query.rs  record.rs  valid_key.rs
src/types/: arc_iter.rs  chunk_storage.rs  editor.rs  entry.rs  id.rs  mod.rs  reduction.rs  storage.rs
