[package]
name = "retriever"
version = "0.0.3"
authors = ["Christopher Lane Hinson <clanehin@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://www.github.com/itsybitesyspider/retriever"
description = "Retriever is an embedded in-memory data store for rust applications."
homepage = "https://www.github.com/itsybitesyspider/retriever"
license = "ISC OR AGPL-3.0-or-later"

[badges]

[dependencies]
fnv = { version = "1.0.6", optional = true }
log = { version = "0.4", optional = true }
smallvec = { version = "1.0", optional = true }

[dev-dependencies]
chrono = "0.4"
criterion = "0.3"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
simple_logger = "1.3.0"
static_assertions = "1.1"

[[bench]]
name = "basic"
harness = false
